[package]
name = "dedup"
version = "0.1.0"
authors = ["Shiqing <shiqing-thu18@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = "0.6.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
